beginning to make page nav

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             
             <!-- Book -->
             <div id="book-view" class="clearfix">
+                <div id="page-nav-view"></div>
                 <div id="sidebar">
                     <div id="book-title-view"></div>
                     <div id="pagecontainer">
