--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         </div>
         <div id="timelinecontainer">
           <div id="timeline"></div>
+          <div id="timeline-controls">
+            <div id="timeline-play" class="ir on">Play</div>
+            <div id="timeline-stop" class="ir">Stop</div>
+          </div>
         </div>
     </script>
     
