Fixing router problem, adding frequency bars

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -34,6 +34,7 @@
             <div id="book-summary-view" class="topview clearfix">
                 <div class="book-title-view"></div>
                 <span class="goto-reading control on">Go to Reading View</span>
+                <div id="place-freq-bars-view"></div>
             </div>
             
             <!-- Book Reading View -->
