--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -90,8 +90,8 @@
     </script>
     
     <script type="text/template" id="page-template">
-        <div class="ocr"><%= OCR %></div>
-        <div class="img"><img src="<%= Image %>"></div>
+        <div class="text"><%= text %></div>
+        <div class="img"><img src="<%= image %>"></div>
     </script>
     
     <script type="text/template" id="info-window-template">
