Simplifying build file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Book Overview -->
             <div id="book-summary-view" class="topview clearfix">
                 <div class="book-title-view"></div>
-                <span class="goto-reading control on">Go to Reading View</span>
+                <span class="goto-reading control on">Go to Reading View &gt;</span>
                 <div id="place-freq-bars-view"></div>
             </div>
             
