tweak before push

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <!-- Book Overview -->
             <div id="book-summary-view" class="topview clearfix">
                 <div class="book-title-view"></div>
-                <span class="goto-reading control on">Go to Reading View &gt;</span>
+                <span class="goto-reading control on">Go to Reading View &gt;&gt;<br><br>
+                    <span style="font-size: 12px; color: #000">(the interface here will eventually be more elegant, I swear)</span>
+                </span>
                 <div id="place-freq-bars-view"></div>
             </div>
             
