--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>GapVis: Visual Interface for Reading Ancient Texts</title>
-    <meta name="description" content="GapVis is a visual interface for reading ancient texts for the Google Ancient Places project">
+    <meta name="description" content="GapVis is a visual interface for reading ancient texts for the Google Ancient Places project.">
     <meta name="author" content="Nick Rabinowitz / Google Ancient Places Project">
     
     <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/gapvis.css">
