--- a/index.html
+++ b/index.html
@@ -43,19 +43,17 @@
                 <a href="#" class="permalink">Permalink</a>
                 <div class="book-title-view"></div>
                 <div id="reading-pane">
-                    <div id="pagecontainer">
-                        <div id="page-view"></div>
-                        <div id="page-control-view">
-                            <div id="nextprev">
-                                <span id="prev" class="control">&lt;&lt; previous</span>
-                                <span id="page-id"></span>
-                                <span id="next" class="control">next &gt;&gt;</span>
-                            </div>
-                            <div id="imagetoggle">
-                                Show:
-                                <span id="showtext" class="control">Text</span> |
-                                <span id="showimg" class="control">Scan</span>
-                            </div>
+                    <div id="page-view"></div>
+                    <div id="page-control-view">
+                        <div id="nextprev">
+                            <span id="prev" class="control">&lt;&lt; previous</span>
+                            <span id="page-id"></span>
+                            <span id="next" class="control">next &gt;&gt;</span>
+                        </div>
+                        <div id="imagetoggle">
+                            Show:
+                            <span id="showtext" class="control">Text</span> |
+                            <span id="showimg" class="control">Scan</span>
                         </div>
                     </div>
                 </div>
@@ -86,10 +84,10 @@
     </script>
 
     <script type="text/template" id="timemap-template">
-        <div id="mapcontainer">
+        <div id="map-container">
           <div id="map"></div>
         </div>
-        <div id="timelinecontainer">
+        <div id="timeline-container">
           <div id="timeline"></div>
           <div id="timeline-controls">
             <div id="timeline-play" class="ir on">Play</div>
