--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -93,6 +93,7 @@
             <div id="timeline-stop" class="ir">Stop</div>
           </div>
         </div>
+        <div id="timemap-legend-container">Least referenced <span class="images"></span> Most referenced</div>
     </script>
     
     <script type="text/template" id="page-template">
@@ -137,6 +138,7 @@
             
             The place most frequently referenced is <span class="place" data-place-id="<%= topPlaces[0].id %>"><%= topPlaces[0].title %></span>, followed by <span class="place" data-place-id="<%= topPlaces[1].id %>"><%= topPlaces[1].title %></span>, <span class="place" data-place-id="<%= topPlaces[2].id %>"><%= topPlaces[2].title %></span>, and <span class="place" data-place-id="<%= topPlaces[3].id %>"><%= topPlaces[3].title %></span>.
         </p>
+        <p><button class="goto-reading">Go to Reading View</button></p>
     </script>
 
 </body>
