--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -35,6 +35,7 @@
                 <div class="book-title-view"></div>
                 <div id="place-freq-bars-view"></div>
                 <div id="book-summary-text-view"></div>
+                <div id="book-wordcloud-view"></div>
             </div>
             
             <!-- Book Reading View -->
