--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <div id="book-place-view" class="topview clearfix">
                 <div class="navigation-view"></div>
                 <div class="book-title-view"></div>
-                <div id="place-summary-view"></div>
+                <div id="place-summary-container">
+                    <div id="place-summary-view"></div>
+                    <div id="related-places-view"></div>
+                </div>
             </div>
 
         </div>
