network map of related places

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -68,6 +68,8 @@
                     <div id="place-summary-view"></div>
                     <div id="related-places-view"></div>
                 </div>
+                <div id="place-map-view"></div>
+                <div id="place-flickr-view"></div>
             </div>
 
         </div>
