network map of related places

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -33,9 +33,9 @@
             <div id="book-summary-view" class="topview clearfix">
                 <div class="navigation-view"></div>
                 <div class="book-title-view"></div>
-                <div id="place-freq-bars-view"></div>
+                <div id="place-freq-bars-view" class="panel"></div>
                 <div id="book-summary-text-view"></div>
-                <div id="book-summary-map-view"></div>
+                <div id="book-summary-map-view" class="panel"></div>
             </div>
             
             <!-- Book Reading View -->
@@ -57,19 +57,19 @@
                         </div>
                     </div>
                 </div>
-                <div id="timemap-view"></div>
+                <div id="timemap-view" class="panel"></div>
             </div>
             
             <!-- Book Place View -->
             <div id="book-place-view" class="topview clearfix">
                 <div class="navigation-view"></div>
                 <div class="book-title-view"></div>
-                <div id="place-summary-container">
+                <div id="place-summary-container" class="panel">
                     <div id="place-summary-view"></div>
                     <div id="related-places-view"></div>
                 </div>
-                <div id="place-map-view"></div>
-                <div id="place-flickr-view"></div>
+                <div id="place-map-view" class="panel"></div>
+                <div id="place-flickr-view" class="panel"></div>
             </div>
 
         </div>
