Adding flickr photos

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -69,7 +69,10 @@
                     <div id="related-places-view"></div>
                 </div>
                 <div id="place-map-view" class="panel"></div>
-                <div id="place-flickr-view" class="panel"></div>
+                <div id="place-flickr-view" class="panel">
+                    <h4>Photos from Flickr</h4> <span class="flickr-link">&middot <a href="" target="_blank">View on Flickr &gt;&gt;</a></span>
+                    <div class="photos"></div>
+                </div>
             </div>
 
         </div>
