Adding link for change this button

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -80,6 +80,10 @@
             GapVis (c) 2011 Nick Rabinowitz / Google Ancient Places Project. <a href="https://github.com/nrabinowitz/gapvis">Code hosted on GitHub</a>
         </footer>
     </div>
+    
+    <div id="change-this-link">
+        <button>Edit this Reference</button>
+    <div>
 
     <!-- TEMPLATES -->
 
