Edit this link showing/hiding nicely

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -83,7 +83,8 @@
     
     <div id="change-this-link">
         <button>Edit this Reference</button>
-    <div>
+    </div>
+    <div id="change-this-hover"></div>
 
     <!-- TEMPLATES -->
 
