--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -84,7 +84,19 @@
     <div id="change-this-link">
         <button>Edit this Reference</button>
     </div>
-    <div id="change-this-hover"></div>
+    
+    <div id="change-this-form">
+        <p>Is something wrong with this place reference? Let us know, so we can fix it!</p>
+        <p>Reference: <span id="ctf-place-name"></span>, p. <span id="ctf-page-id"></span>
+        <form>
+            <label for="ctf-problem">What's wrong here?</label>
+            <div>
+                <textarea id="ctf-problem" name="ctf-problem" rows="5"></textarea>
+            </div>
+            <input type="hidden" name="page-id">
+            <input type="hidden" name="place-id">
+        </form>
+    </div>
 
     <!-- TEMPLATES -->
 
