change this form working

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -87,7 +87,10 @@
     
     <div id="change-this-form">
         <p>Is something wrong with this place reference? Let us know, so we can fix it!</p>
-        <p>Reference: <span id="ctf-place-name"></span>, p. <span id="ctf-page-id"></span>
+        <p>
+            Reference: <span id="ctf-place-name"></span><span class="pagenum">, 
+            p. <span id="ctf-page-id"></span></span>
+        </p>
         <form>
             <label for="ctf-problem">What's wrong here?</label>
             <div>
