adding jump to page input'

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -70,7 +70,7 @@
                     <div id="page-control-view">
                         <div id="nextprev">
                             <span id="prev" class="control">&lt;&lt; previous</span>
-                            <span id="page-id"></span>
+                            <input id="page-id" maxlength="5">
                             <span id="next" class="control">next &gt;&gt;</span>
                         </div>
                         <div id="imagetoggle">
