--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -17,6 +17,7 @@
     <div id="container">
         <header>
             <h1><a href="#">GapVis</a></h1>
+            <button id="goto-home">Home</button>
         </header>
         <div id="app-view" role="main" class="clearfix">
         
