'Latest production build'

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 <h4>External Resources</h4>
 <ul>
     <li><a href="<%= uri %>" target="_blank">Place page on Pleiades</a></li>
+    <li><a href="http://gap.alexandriaarchive.org/places/books?uri=http%3A%2F%2Fpleiades.stoa.org%2Fplaces%2F<%= id %>" target="_blank">Books referencing <%= title %></a></li>
     <li><a href="http://pelagios.dme.ait.ac.at/graph-explorer/?pleiadesID=<%= id %>" target="_blank">Pelagios Graph Explorer</a></li>
 </ul></script><script type="text/template" id="info-window-template"><h3><%= title %> <span class="zoom control on">(Zoom In)</span></h3>
 <p><span class="control on goto-place">View Details &gt;&gt;</span><p>
