final style tweaks

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -16,7 +16,7 @@
 
     <div id="container">
         <header>
-            <h1><a href="#">GapVis</a></h1>
+            <h1><a href="#">GapVis</a> <span class="beta">BETA</span></h1>
             <button id="goto-home">Home</button>
         </header>
         <div id="app-view" role="main" class="clearfix">
