--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="container">
         <header>
-            <h1><a href="#">GapVis</a></h1>
+            <h1><a href="#">GapVis</a> <span class="beta">BETA</span></h1>
             <button id="goto-home">Home</button>
         </header>
         <div id="app-view" role="main" class="clearfix">
@@ -126,7 +126,7 @@
     </div>
 
     <script type="text/template" id="book-summary-text-template"><p>
-    The Google Books version of "<%= title %>", by <%= author %>, was published in <%= printed %>. It is <%= pageCount %> pages long and references <%= places.length %> identified ancient places. 
+    The Google Books version of "<%= title %>", by <%= author %>, was published in <%= printed %>. It <!-- is <%= pageCount %> pages long and --> references <%= places.length %> identified ancient places. 
     
     The place most frequently referenced is <span class="place" data-place-id="<%= topPlaces[0].id %>"><%= topPlaces[0].title %></span>, followed by <span class="place" data-place-id="<%= topPlaces[1].id %>"><%= topPlaces[1].title %></span>, <span class="place" data-place-id="<%= topPlaces[2].id %>"><%= topPlaces[2].title %></span>, and <span class="place" data-place-id="<%= topPlaces[3].id %>"><%= topPlaces[3].title %></span>.
 </p>
@@ -134,7 +134,7 @@
 <div class="img"><% if (image) { %><img src="<%= image %>"><% } else { %>(No image available)<% } %></div></script><script type="text/template" id="book-title-template"><h2 class="book-title"><%= title %></h2>
 <p><em>By <%= author %></em></p>
 <p>
-    Published <%= printed %>, <%= pages.length %> pages &middot;
+    Published <%= printed %><!--, <%= pages.length %> pages --> &middot;
     <a href="<%= uri %>">View on Google Books</a>
 </p></script><script type="text/template" id="place-summary-template"><h3><%= title %></h3>
 <div class="frequency-bars"></div>
