--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         </div>
         <footer>
-            GapVis (c) 2011 Nick Rabinowitz / Google Ancient Places Project. <a href="https://github.com/nrabinowitz/gapvis">Code hosted on GitHub</a>
+            GapVis (c) 2011 <a href="http://www.nickrabinowitz.com">Nick Rabinowitz</a> / <a href="http://googleancientplaces.wordpress.com/">Google Ancient Places</a>. Funding by&nbsp;&nbsp;<img src="images/google_logo.png" alt="Google">.
         </footer>
     </div>
     
