Adding About page, top nav

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -17,7 +17,9 @@
     <div id="container">
         <header>
             <h1><a href="#">GapVis</a> <span class="beta">BETA</span></h1>
-            <button id="goto-home">Home</button>
+            <nav>
+                <a href="index.html">Home</a> &middot; <a href="about.html">About Us</a> &middot; <a href="http://googleancientplaces.wordpress.com/">Blog</a>
+            </nav>
         </header>
         <div id="app-view" role="main" class="clearfix">
         
