--- a/about.html
+++ b/about.html
@@ -11,7 +11,19 @@
     <![endif]-->
     
     <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="lib/jquery/css/jquery-ui-1.8.16.custom.css"><link rel="stylesheet" href="css/gapvis.css">
-    
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-29652313-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 </head>
 
 <body>
