Adding a bunch of loading spinners in appropriate spots

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -79,7 +79,7 @@
                 <div class="navigation-view"></div>
                 <div class="book-title-view"></div>
                 <div id="reading-pane">
-                    <div id="page-view"></div>
+                    <div id="page-view" class="loading"></div>
                     <div id="page-control-view">
                         <div id="nextprev">
                             <span id="prev" class="control">&lt;&lt; previous</span>
