Adding spinner to Index view

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -31,8 +31,8 @@
             <!-- Homepage -->
             <div id="index-view" class="topview">
                 
-                <div id="book-list-view" class="panel">
-                    <p>Select a book to view:</p>
+                <div id="book-list-view" class="panel loading">
+                    <h3>Select a book to view:</h3>
                     <div id="book-list"></div>
                 </div>
                 
