Adding Alexandria Archive credit

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -113,7 +113,7 @@
 
         </div>
         <footer>
-            GapVis (c) 2011 <a href="http://www.nickrabinowitz.com">Nick Rabinowitz</a> / <a href="http://googleancientplaces.wordpress.com/">Google Ancient Places</a>. Funding by&nbsp;&nbsp;<img src="images/google_logo.png" alt="Google">.
+            GapVis (c) 2011 <a href="http://www.nickrabinowitz.com">Nick Rabinowitz</a> / <a href="http://googleancientplaces.wordpress.com/">Google Ancient Places</a>. Hosting by <a href="http://alexandriaarchive.org/">AlexandriaArchive.org</a>. Funding by&nbsp;&nbsp;<img src="images/google_logo.png" alt="Google">.
         </footer>
     </div>
     
