Adding message view per #10

--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -117,6 +117,10 @@
         </footer>
     </div>
     
+    <div id="message-view">
+        <div id="message-text"></div>
+    </div>
+    
     <div id="change-this-link">
         <button>Edit this Reference</button>
     </div>
