--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -40,23 +40,34 @@
     </div>
     
     <div id="change-this-link">
-        <button>Edit this Reference</button>
+        <button class="btn" title="Report an Issue"><i class="icon-edit"></i></button>
     </div>
     
-    <div id="change-this-form">
-        <p>Is something wrong with this place reference? Let us know, so we can fix it!</p>
-        <p>
-            Reference: <span id="ctf-place-name"></span><span class="pagenum">, 
-            p. <span id="ctf-page-id"></span></span>
-        </p>
-        <form>
-            <label for="ctf-problem">What's wrong here?</label>
-            <div>
-                <textarea id="ctf-problem" name="ctf-problem" rows="5"></textarea>
-            </div>
-            <input type="hidden" name="page-id">
-            <input type="hidden" name="place-id">
-        </form>
+    <div id="change-this-form" class="modal">
+        <div class="modal-header">
+            <button class="close cancel">&times;</button>
+            <h3>Report an Issue</h3>
+        </div>
+        <div class="modal-body">
+            <p>Is something wrong with this place reference? Let us know, so we can fix it!</p>
+            <p>
+                Reference: <span class="ref"><span id="ctf-place-name"></span> (<span id="ctf-book-title"></span><span class="pagenum">, 
+                p. <span id="ctf-page-id"></span></span>)</span>
+            </p>
+            <form>
+                <label for="ctf-problem">What's wrong here?</label>
+                <div>
+                    <textarea id="ctf-problem" name="ctf-problem" rows="5"></textarea>
+                </div>
+                <input type="hidden" name="book-id">
+                <input type="hidden" name="page-id">
+                <input type="hidden" name="place-id">
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn cancel">Cancel</button>
+            <button class="btn btn-primary submit">Submit</button>
+        </div>
     </div>
 
     <!-- TEMPLATES -->
