--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -23,7 +23,7 @@
         <header>
             <h1><a href="#">GapVis</a> <span class="beta">BETA</span></h1>
             <nav>
-                <a href="index.html">Home</a> &middot; <a href="about.html">About Us</a> &middot; <a href="http://googleancientplaces.wordpress.com/">Blog</a>
+                <a href="index.html">Home</a> &middot; <a href="http://googleancientplaces.wordpress.com/about/">About Us</a> &middot; <a href="http://googleancientplaces.wordpress.com/">Blog</a>
             </nav>
         </header>
         <div id="app-view" role="main" class="clearfix"></div>
