--- a/index.tmpl.html
+++ b/index.tmpl.html
@@ -51,14 +51,15 @@
         <div class="modal-body">
             <p>Is something wrong with this place reference? Let us know, so we can fix it!</p>
             <p>
-                Reference: <span class="ref"><span id="ctf-place-name"></span> (<span id="ctf-book-title"></span><span class="pagenum">, 
+                Reference: <span class="ref">"<span id="ctf-place-name"></span>" (<span id="ctf-book-title"></span><span class="pagenum">, 
                 p. <span id="ctf-page-id"></span></span>)</span>
             </p>
             <form>
                 <label for="ctf-problem">What's wrong here?</label>
                 <div>
-                    <textarea id="ctf-problem" name="ctf-problem" rows="5"></textarea>
+                    <textarea id="ctf-problem" name="note" rows="5"></textarea>
                 </div>
+                <input type="hidden" name="token">
                 <input type="hidden" name="book-id">
                 <input type="hidden" name="page-id">
                 <input type="hidden" name="place-id">
